Fix build
Handle application debug options in one Dockerfile