@@ -26,6 +26,7 @@
                 <configuration>
                     <source>20</source>
                     <target>20</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
 
